First user profile template sketch
Added shortcode-edd-user-profile.php using EDD templating system
Improved project file structure

--- a/assets/css/edd-user-profiles.css
+++ b/assets/css/edd-user-profiles.css
@@ -1,3 +1,4 @@
+/* Profile editor */
 .edd-user-profiles-hide,
 #edd_profile_avatar_wrap #edd_avatar_file {
     display: none !important;
@@ -6,3 +7,5 @@
 #edd_avatar_preview {
     object-fit: cover;
 }
+
+/* User profile tabs */
