--- a/assets/css/edd-user-profiles.css
+++ b/assets/css/edd-user-profiles.css
@@ -9,3 +9,47 @@
 }
 
 /* User profile tabs */
+#edd-user-profiles-nav-tabs {
+    display: table;
+    width: 100%;
+}
+
+#edd-user-profiles-nav-tabs .edd-user-profiles-nav-tab {
+    display: table-cell;
+    text-decoration: none;
+}
+
+.edd-user-profiles-tab:not(.active) {
+    display: none;
+}
+
+/* Spinner */
+.edd-user-profiles-spinner {
+    width: 40px;
+    height: 40px;
+    margin: 100px auto;
+    background-color: #ccc;
+
+    border-radius: 100%;
+    -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
+    animation: sk-scaleout 1.0s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-scaleout {
+    0% { -webkit-transform: scale(0) }
+    100% {
+        -webkit-transform: scale(1.0);
+        opacity: 0;
+    }
+}
+
+@keyframes sk-scaleout {
+    0% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    } 100% {
+          -webkit-transform: scale(1.0);
+          transform: scale(1.0);
+          opacity: 0;
+      }
+}
